--- a/frontend/src/styles/PlannerSwitcher.scss
+++ b/frontend/src/styles/PlannerSwitcher.scss
@@ -8,6 +8,8 @@
   border-radius: 50rem;
   z-index: 6;
   position: relative;
+  top: -73vh;
+  left: 90vw;
 
   .top {
     height: 50%;
